[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/screens/MatchScreenImproved.gd" id="1"]
[ext_resource type="Theme" path="res://themes/MobileTheme.tres" id="2"]
[ext_resource type="Script" path="res://scripts/ui/QuickBar.gd" id="3"]
[ext_resource type="PackedScene" path="res://scenes/match/event_timeline_3d.tscn" id="4"]
[ext_resource type="PackedScene" path="res://scenes/ui/match/SubstitutionPanel.tscn" id="5"]
[ext_resource type="PackedScene" path="res://scenes/ui/match/TacticalPanel.tscn" id="6"]
[ext_resource type="Script" path="res://scripts/components/FieldView.gd" id="7"]
[ext_resource type="PackedScene" path="res://scenes/components/PlayerDot.tscn" id="8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxBottomBar"]
bg_color = Color(0, 0, 0, 0.7)

[sub_resource type="StyleBoxFlat" id="StyleBoxQuickBar"]
bg_color = Color(0, 0, 0, 0.7)

[node name="MatchScreenImproved" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2")
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.2, 0.1, 1)

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
stretch_shrink = 1

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
size = Vector2i(1080, 1920)
render_target_update_mode = 3
transparent_bg = false
disable_3d = false
physics_object_picking = false

[node name="EventAnimator3D" parent="SubViewportContainer/SubViewport" instance=ExtResource("4")]

[node name="Header" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 120)
anchor_right = 1.0
offset_bottom = 120.0

[node name="HBox" type="HBoxContainer" parent="Header"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -20.0
theme_override_constants/separation = 20

[node name="HomeTeam" type="VBoxContainer" parent="Header/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Name" type="Label" parent="Header/HBox/HomeTeam"]
text = "Ïö∞Î¶¨ ÌåÄ"
theme_override_font_sizes/font_size = 36
horizontal_alignment = 0

[node name="Score" type="Label" parent="Header/HBox/HomeTeam"]
text = "0"
theme_override_font_sizes/font_size = 54
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)
horizontal_alignment = 0

[node name="TimeInfo" type="VBoxContainer" parent="Header/HBox"]

[node name="Time" type="Label" parent="Header/HBox/TimeInfo"]
text = "45'"
theme_override_font_sizes/font_size = 46
horizontal_alignment = 1

[node name="Half" type="Label" parent="Header/HBox/TimeInfo"]
text = "Ï†ÑÎ∞ò"
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
horizontal_alignment = 1

[node name="AwayTeam" type="VBoxContainer" parent="Header/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Name" type="Label" parent="Header/HBox/AwayTeam"]
text = "ÏÉÅÎåÄ ÌåÄ"
theme_override_font_sizes/font_size = 36
horizontal_alignment = 2

[node name="Score" type="Label" parent="Header/HBox/AwayTeam"]
text = "0"
theme_override_font_sizes/font_size = 54
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
horizontal_alignment = 2

[node name="ControlButtons" type="HBoxContainer" parent="Header/HBox"]
layout_mode = 2
size_flags_horizontal = 1
alignment = 2
theme_override_constants/separation = 8

[node name="ViewToggleButton" type="Button" parent="Header/HBox/ControlButtons"]
layout_mode = 2
toggle_mode = true
text = "3D"
tooltip_text = "2D/3D Î≥¥Í∏∞ Ï†ÑÌôò"

[node name="MainContent" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 120.0
offset_bottom = -200.0
margin_left = 20.0
margin_right = -20.0
theme_override_constants/separation = 20

[node name="LeftPanel" type="VBoxContainer" parent="MainContent"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="FieldView" type="Panel" parent="MainContent/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="Field" type="Control" parent="MainContent/LeftPanel/FieldView"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
script = ExtResource("7")
player_dot_scene = ExtResource("8")

[node name="FieldRect" type="ColorRect" parent="MainContent/LeftPanel/FieldView/Field"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.6, 0.2, 1)

[node name="FieldLines" type="Control" parent="MainContent/LeftPanel/FieldView/Field"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterLine" type="ColorRect" parent="MainContent/LeftPanel/FieldView/Field/FieldLines"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -2.0
offset_right = 2.0
color = Color(1, 1, 1, 0.8)

[node name="CenterCircle" type="Control" parent="MainContent/LeftPanel/FieldView/Field/FieldLines"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="PenaltyBoxLeft" type="ColorRect" parent="MainContent/LeftPanel/FieldView/Field/FieldLines"]
anchor_top = 0.3
anchor_bottom = 0.7
offset_right = 80.0
color = Color(1, 1, 1, 0)

[node name="Border" type="ReferenceRect" parent="MainContent/LeftPanel/FieldView/Field/FieldLines/PenaltyBoxLeft"]
anchor_right = 1.0
anchor_bottom = 1.0
border_width = 2.0
border_color = Color(1, 1, 1, 0.8)

[node name="PenaltyBoxRight" type="ColorRect" parent="MainContent/LeftPanel/FieldView/Field/FieldLines"]
anchor_left = 1.0
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.7
offset_left = -80.0
color = Color(1, 1, 1, 0)

[node name="Border" type="ReferenceRect" parent="MainContent/LeftPanel/FieldView/Field/FieldLines/PenaltyBoxRight"]
anchor_right = 1.0
anchor_bottom = 1.0
border_width = 2.0
border_color = Color(1, 1, 1, 0.8)

[node name="Ball" type="Label" parent="MainContent/LeftPanel/FieldView/Field"]
offset_left = 280.0
offset_top = 400.0
text = "‚öΩ"
theme_override_font_sizes/font_size = 32

[node name="HomePlayers" type="Control" parent="MainContent/LeftPanel/FieldView/Field"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AwayPlayers" type="Control" parent="MainContent/LeftPanel/FieldView/Field"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MinimapPanel" type="Panel" parent="MainContent/LeftPanel"]
custom_minimum_size = Vector2(0, 200)

[node name="Label" type="Label" parent="MainContent/LeftPanel/MinimapPanel"]
offset_left = 20.0
offset_top = 10.0
text = "ÎØ∏ÎãàÎßµ"
theme_override_font_sizes/font_size = 24

[node name="Minimap" type="Control" parent="MainContent/LeftPanel/MinimapPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 40.0
margin_right = -20.0
margin_bottom = -20.0

[node name="MinimapField" type="ColorRect" parent="MainContent/LeftPanel/MinimapPanel/Minimap"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.15, 0.4, 0.15, 1)

[node name="MinimapCenterLine" type="ColorRect" parent="MainContent/LeftPanel/MinimapPanel/Minimap"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1.0
offset_right = 1.0
color = Color(1, 1, 1, 0.5)

[node name="MinimapHomePlayers" type="Control" parent="MainContent/LeftPanel/MinimapPanel/Minimap"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MinimapAwayPlayers" type="Control" parent="MainContent/LeftPanel/MinimapPanel/Minimap"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MinimapBall" type="ColorRect" parent="MainContent/LeftPanel/MinimapPanel/Minimap"]
custom_minimum_size = Vector2(6, 6)
offset_left = 280.0
offset_top = 70.0
offset_right = 286.0
offset_bottom = 76.0
color = Color(1, 1, 1, 1)

[node name="RightPanel" type="VBoxContainer" parent="MainContent"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="StatsPanel" type="Panel" parent="MainContent/RightPanel"]
custom_minimum_size = Vector2(0, 300)

[node name="VBox" type="VBoxContainer" parent="MainContent/RightPanel/StatsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="Title" type="Label" parent="MainContent/RightPanel/StatsPanel/VBox"]
text = "Í≤ΩÍ∏∞ ÌÜµÍ≥Ñ"
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainContent/RightPanel/StatsPanel/VBox"]

[node name="Possession" type="HBoxContainer" parent="MainContent/RightPanel/StatsPanel/VBox"]

[node name="Label" type="Label" parent="MainContent/RightPanel/StatsPanel/VBox/Possession"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ï†êÏú†Ïú®"
theme_override_font_sizes/font_size = 24

[node name="HomeValue" type="Label" parent="MainContent/RightPanel/StatsPanel/VBox/Possession"]
text = "52%"
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)

[node name="Divider" type="Label" parent="MainContent/RightPanel/StatsPanel/VBox/Possession"]
text = " : "
theme_override_font_sizes/font_size = 24

[node name="AwayValue" type="Label" parent="MainContent/RightPanel/StatsPanel/VBox/Possession"]
text = "48%"
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)

[node name="Shots" type="HBoxContainer" parent="MainContent/RightPanel/StatsPanel/VBox"]

[node name="Label" type="Label" parent="MainContent/RightPanel/StatsPanel/VBox/Shots"]
layout_mode = 2
size_flags_horizontal = 3
text = "ÏäàÌåÖ"
theme_override_font_sizes/font_size = 24

[node name="HomeValue" type="Label" parent="MainContent/RightPanel/StatsPanel/VBox/Shots"]
text = "8"
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)

[node name="Divider" type="Label" parent="MainContent/RightPanel/StatsPanel/VBox/Shots"]
text = " : "
theme_override_font_sizes/font_size = 24

[node name="AwayValue" type="Label" parent="MainContent/RightPanel/StatsPanel/VBox/Shots"]
text = "5"
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)

[node name="Passes" type="HBoxContainer" parent="MainContent/RightPanel/StatsPanel/VBox"]

[node name="Label" type="Label" parent="MainContent/RightPanel/StatsPanel/VBox/Passes"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ìå®Ïä§"
theme_override_font_sizes/font_size = 24

[node name="HomeValue" type="Label" parent="MainContent/RightPanel/StatsPanel/VBox/Passes"]
text = "312"
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)

[node name="Divider" type="Label" parent="MainContent/RightPanel/StatsPanel/VBox/Passes"]
text = " : "
theme_override_font_sizes/font_size = 24

[node name="AwayValue" type="Label" parent="MainContent/RightPanel/StatsPanel/VBox/Passes"]
text = "285"
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)

[node name="Fouls" type="HBoxContainer" parent="MainContent/RightPanel/StatsPanel/VBox"]

[node name="Label" type="Label" parent="MainContent/RightPanel/StatsPanel/VBox/Fouls"]
layout_mode = 2
size_flags_horizontal = 3
text = "ÌååÏö∏"
theme_override_font_sizes/font_size = 24

[node name="HomeValue" type="Label" parent="MainContent/RightPanel/StatsPanel/VBox/Fouls"]
text = "2"
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)

[node name="Divider" type="Label" parent="MainContent/RightPanel/StatsPanel/VBox/Fouls"]
text = " : "
theme_override_font_sizes/font_size = 24

[node name="AwayValue" type="Label" parent="MainContent/RightPanel/StatsPanel/VBox/Fouls"]
text = "4"
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)

[node name="EventsPanel" type="Panel" parent="MainContent/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="MainContent/RightPanel/EventsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="Title" type="Label" parent="MainContent/RightPanel/EventsPanel/VBox"]
text = "Ïã§ÏãúÍ∞Ñ Ï§ëÍ≥Ñ"
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainContent/RightPanel/EventsPanel/VBox"]

[node name="ScrollContainer" type="ScrollContainer" parent="MainContent/RightPanel/EventsPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="EventsList" type="VBoxContainer" parent="MainContent/RightPanel/EventsPanel/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Event1" type="HBoxContainer" parent="MainContent/RightPanel/EventsPanel/VBox/ScrollContainer/EventsList"]

[node name="Time" type="Label" parent="MainContent/RightPanel/EventsPanel/VBox/ScrollContainer/EventsList/Event1"]
custom_minimum_size = Vector2(60, 0)
text = "45'"
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)

[node name="Icon" type="Label" parent="MainContent/RightPanel/EventsPanel/VBox/ScrollContainer/EventsList/Event1"]
text = "‚öΩ"
theme_override_font_sizes/font_size = 24

[node name="Text" type="Label" parent="MainContent/RightPanel/EventsPanel/VBox/ScrollContainer/EventsList/Event1"]
layout_mode = 2
size_flags_horizontal = 3
text = "10Î≤à ÏÑ†Ïàò Í≥®!"
theme_override_font_sizes/font_size = 22
autowrap_mode = 2

[node name="Event2" type="HBoxContainer" parent="MainContent/RightPanel/EventsPanel/VBox/ScrollContainer/EventsList"]

[node name="Time" type="Label" parent="MainContent/RightPanel/EventsPanel/VBox/ScrollContainer/EventsList/Event2"]
custom_minimum_size = Vector2(60, 0)
text = "42'"
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)

[node name="Icon" type="Label" parent="MainContent/RightPanel/EventsPanel/VBox/ScrollContainer/EventsList/Event2"]
text = "üü®"
theme_override_font_sizes/font_size = 24

[node name="Text" type="Label" parent="MainContent/RightPanel/EventsPanel/VBox/ScrollContainer/EventsList/Event2"]
layout_mode = 2
size_flags_horizontal = 3
text = "ÏÉÅÎåÄÌåÄ 8Î≤à Í≤ΩÍ≥†"
theme_override_font_sizes/font_size = 22
autowrap_mode = 2

[node name="Event3" type="HBoxContainer" parent="MainContent/RightPanel/EventsPanel/VBox/ScrollContainer/EventsList"]

[node name="Time" type="Label" parent="MainContent/RightPanel/EventsPanel/VBox/ScrollContainer/EventsList/Event3"]
custom_minimum_size = Vector2(60, 0)
text = "38'"
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)

[node name="Icon" type="Label" parent="MainContent/RightPanel/EventsPanel/VBox/ScrollContainer/EventsList/Event3"]
text = "üîÑ"
theme_override_font_sizes/font_size = 24

[node name="Text" type="Label" parent="MainContent/RightPanel/EventsPanel/VBox/ScrollContainer/EventsList/Event3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ïö∞Î¶¨ÌåÄ ÍµêÏ≤¥: 7Î≤à ‚Üí 14Î≤à"
theme_override_font_sizes/font_size = 22
autowrap_mode = 2

[node name="BottomBar" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
z_index = 10
offset_top = -200.0
theme_override_styles/panel = SubResource("StyleBoxBottomBar")

[node name="VBox" type="VBoxContainer" parent="BottomBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="TacticsRow" type="HBoxContainer" parent="BottomBar/VBox"]
theme_override_constants/separation = 20

[node name="TacticsLabel" type="Label" parent="BottomBar/VBox/TacticsRow"]
text = "Ï†ÑÏà†:"
theme_override_font_sizes/font_size = 24

[node name="AttackButton" type="Button" parent="BottomBar/VBox/TacticsRow"]
custom_minimum_size = Vector2(180, 80)
text = "Í≥µÍ≤©Ï†Å"
theme_override_font_sizes/font_size = 24

[node name="BalanceButton" type="Button" parent="BottomBar/VBox/TacticsRow"]
custom_minimum_size = Vector2(180, 80)
text = "Í∑†Ìòï"
theme_override_font_sizes/font_size = 24

[node name="DefenseButton" type="Button" parent="BottomBar/VBox/TacticsRow"]
custom_minimum_size = Vector2(180, 80)
text = "ÏàòÎπÑÏ†Å"
theme_override_font_sizes/font_size = 24

[node name="ActionsRow" type="HBoxContainer" parent="BottomBar/VBox"]
theme_override_constants/separation = 20

[node name="SubstituteButton" type="Button" parent="BottomBar/VBox/ActionsRow"]
custom_minimum_size = Vector2(240, 80)
text = "üîÑ ÍµêÏ≤¥"
theme_override_font_sizes/font_size = 28

[node name="TacticalButton" type="Button" parent="BottomBar/VBox/ActionsRow"]
custom_minimum_size = Vector2(240, 80)
text = "‚öôÔ∏è Ï†ÑÏà†"
theme_override_font_sizes/font_size = 28

[node name="TimeoutButton" type="Button" parent="BottomBar/VBox/ActionsRow"]
custom_minimum_size = Vector2(240, 80)
text = "‚è∏Ô∏è ÌÉÄÏûÑÏïÑÏõÉ"
theme_override_font_sizes/font_size = 28

[node name="StartButton" type="Button" parent="BottomBar/VBox/ActionsRow"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(240, 80)
text = "‚ñ∂ Í≤ΩÍ∏∞ ÏãúÏûë"
theme_override_font_sizes/font_size = 28

[node name="SkipButton" type="Button" parent="BottomBar/VBox/ActionsRow"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 80)
text = "‚è© Ïä§ÌÇµ"
theme_override_font_sizes/font_size = 28

[node name="PopupLayer" type="CanvasLayer" parent="."]

[node name="SubstitutionPanel" parent="PopupLayer" instance=ExtResource("5")]

[node name="TacticalPanel" parent="PopupLayer" instance=ExtResource("6")]

[node name="QuickBar" type="Control" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
z_index = 10
script = ExtResource("3")
theme_override_styles/panel = SubResource("StyleBoxQuickBar")
